# group_08_assignment_1

./: CMakeLists.txt  LICENSE  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/group_8_assignment_1/lib/group_8_assignment_1/: apriltag_center_node  initial_pose_node
install/group_8_assignment_1/share/ament_index/resource_index/package_run_dependencies/: group_8_assignment_1
install/group_8_assignment_1/share/ament_index/resource_index/parent_prefix_path/: group_8_assignment_1
install/group_8_assignment_1/share/group_8_assignment_1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/group_8_assignment_1/share/group_8_assignment_1/cmake/: group_8_assignment_1Config-version.cmake  group_8_assignment_1Config.cmake
install/group_8_assignment_1/share/group_8_assignment_1/environment/: ament_prefix_path.dsv  path.dsv
install/group_8_assignment_1/share/group_8_assignment_1/launch/: pipeline.launch.py
launch/: pipeline.launch.py
log/: latest_build
src/: apriltag_center_node.cpp  camera_relay_node.cpp  initial_pose_node.cpp  navigation_goal_node.cpp  table_detection_node.cpp  tag_goal_node.cpp  turtlebot_node.cpp
