<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group_08_assignment_1</name>
  <version>0.0.0</version>
  <description>Assignment 1: Intelligent Robotics - Turtlebot Pipeline </description>
  <maintainer email="jayamalsigeras@gmail.com">Jayamal Sigera</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <exec_depend>nav2_msgs</exec_depend>  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
